--- a/src/styles/article/Competence.css
+++ b/src/styles/article/Competence.css
@@ -3,9 +3,9 @@
   max-width: 1100px;
   margin: 0 auto;
   padding: 40px 20px;
-  background-color: #f4f7fa;
   border-radius: 12px;
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--article-container-box-shadow);
+  background-color: var(--article-container-bg-color);
 }
 
 .skills-title {
