--- a/src/styles/article/Biographie.css
+++ b/src/styles/article/Biographie.css
@@ -3,9 +3,9 @@
   max-width: 1000px;
   margin: 40px auto;
   padding: 40px;
-  background-color: #f7f9fc;
   border-radius: 15px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--article-container-box-shadow);
+  background-color: var(--article-container-bg-color);
 }
 
 /* Header de la biographie */
