--- a/src/styles/article/Project.css
+++ b/src/styles/article/Project.css
@@ -1,56 +1,48 @@
-.square .project {
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.square .project h3 {
-  font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-.square .project p {
-  font-size: 16px;
-  line-height: 1.5;
-  color: #666;
-}
-
 .project-page {
   padding: 20px;
+  max-width: 100%; /* Ajustement pour que la page prenne toute la largeur sur mobile */
+  margin: 0 auto; /* Centre le contenu */
+  box-shadow: var(--article-container-box-shadow);
+  background-color: var(--article-container-bg-color);
 }
 
 .close-btn {
-  font-size: 1.5rem;
+  font-size: 2rem;
   background-color: transparent;
   border: none;
   cursor: pointer;
   position: absolute;
   top: 20px;
   right: 20px;
+  color: #333;
 }
 
 .project-title {
   font-size: 2.5rem;
   color: #2c3e50;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .legend-container {
   justify-content: center;
+  flex-wrap: wrap; /* Permet aux éléments de passer à la ligne sur les petits écrans */
+  gap: 20px;
   margin: 20px 0;
 }
 
 .legend-item {
+  padding-top: 2%;
   display: flex;
   align-items: center;
-  margin: 0 15px;
 }
 
 .legend-color {
-  width: 5%;
-  height: 10px;
+  width: 25px;
+  height: 25px;
   margin-right: 10px;
+  width: 50px;
+  height: 15px;
 }
 
 .legend-text {
@@ -59,13 +51,38 @@
 }
 
 #error-color {
-  background-color: #FFCCCC;
+  background-color: #FF6666;
 }
 
 #waiting-color {
-  background-color: #FFF4CC;
+  background-color: #FFCC66;
 }
 
 #complete-color {
-  background-color: #DFF2BF;
+  background-color: #66FF66;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .project-title {
+    font-size: 2rem; /* Réduire la taille du titre sur des écrans plus petits */
+  }
+}
+
+@media (max-width: 480px) {
+  .close-btn {
+    font-size: 1.8rem;
+  }
+
+  .project-title {
+    font-size: 1.8rem; /* Réduction du titre sur petits écrans */
+  }
+
+  .legend-container {
+    gap: 10px; /* Moins d'espace entre les éléments sur les écrans plus petits */
+  }
+
+  .legend-text {
+    font-size: 0.85rem;
+  }
 }
