--- a/src/styles/page/Erreur.css
+++ b/src/styles/page/Erreur.css
@@ -58,7 +58,7 @@
   justify-content: center;
   font-size: 1.5rem;
   color: #ffcc00;
-  background-color: #333;
+  background-color: var(--header-bg-color);
   padding: 20px;
   border-radius: 10px;
   text-shadow: 0 0 10px rgba(255, 204, 0, 0.7);
