--- a/src/styles/animation-article.css
+++ b/src/styles/animation-article.css
@@ -1,4 +1,8 @@
 .animated-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
   opacity: 1;
   transform: translateY(0);
   transition: opacity 0.5s ease, transform 0.5s ease;
@@ -123,6 +127,7 @@
   font-size: 1.2rem !important; 
   margin-top: 0; 
   transform: translateY(-10px);
+  align-self: flex-start;
 }
 
 .animated-article:hover {
