--- a/src/styles/article/Project.css
+++ b/src/styles/article/Project.css
@@ -1,7 +1,7 @@
 .project-page {
   padding: 20px;
-  max-width: 100%; /* Ajustement pour que la page prenne toute la largeur sur mobile */
-  margin: 0 auto; /* Centre le contenu */
+  max-width: 100%;
+  margin: 0 auto; 
   box-shadow: var(--article-container-box-shadow);
   background-color: var(--article-container-bg-color);
 }
@@ -26,7 +26,7 @@
 
 .legend-container {
   justify-content: center;
-  flex-wrap: wrap; /* Permet aux éléments de passer à la ligne sur les petits écrans */
+  flex-wrap: wrap;
   gap: 20px;
   margin: 20px 0;
 }
