--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,7 @@ main .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
+  margin: 3%;
 }
 
 .article1, .article2, .article3 {
@@ -53,7 +54,7 @@ main .grid {
   pointer-events: none;
 }
 
-h2:not(){
+h2{
   margin: 0;
   padding: 0;
   font-size: 24px;
@@ -76,8 +77,8 @@ h2:not(){
 
 .eportfolio {
   font-family: 'Orbitron', sans-serif;
-  font-size: calc(1.5rem + 2vw);
-  font-weight: 700;
+  font-size: calc(1.5rem + 1vw);
+  font-weight: 500;
   position: relative;
   text-transform: uppercase;
   letter-spacing: 0.2em;
@@ -97,11 +98,11 @@ body.dark .eportfolio{
 
 body.dark .eportfolio::before {
   content: '»';
-  font-size: calc(4rem + 5vw); /* Augmenter la taille */
+  font-size: calc(4rem + 5vw); 
   color: var(--neon-color-2);
   position: absolute;
   left: -2.5rem; /* Ajuster la position horizontale */
-  top: 35%;
+  top: 25%;
   transform: translateY(-50%); /* Centrer verticalement */
 }
 
